JumpScript/tests/baselines/reference/MemberFunctionDeclaration6_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration6_es6.jump(2,5): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration6_es6.jump(3,1): error TS1005: '(' expected.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration6_es6.jump (2 errors) ====
    class C {
       *foo
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    ~
!!! error TS1005: '(' expected.